# raisim-tactile-manager

./: .gitignore  CMakeLists.txt  README.md
cmake/: raisim_tactile_managerConfig.cmake.in
docs/: codex_urdf_conversion_guide.md  modularization_plan.md  urdf_requirements.md
examples/bolt_wrench_minimal/: config.yaml  main.cpp
examples/bolt_wrench_minimal/rsc/urdf/: tactile_gripper_example.urdf  target_plate_example.urdf
include/raisim_tactile/: ContactCollector.hpp  HybridPenetrationTactile.hpp  MeshSurface.hpp  SensorGrid.hpp
src/: ContactCollector.cpp  HybridPenetrationTactile.cpp  MeshSurface.cpp  SensorGrid.cpp
tests/: benchmark_hybrid_tactile.cpp  test_contact_collector_world.cpp  test_core.cpp
